--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="vendor/aframe-master.min.js"></script>
     <script src="build.js"></script>
     <script src="https://unpkg.com/aframe-gltf-exporter-component/dist/aframe-gltf-exporter-component.min.js"></script>
-    <script src="vendor/aframe-teleport-controls.min.js"></script>
+    <!--script src="vendor/aframe-teleport-controls.min.js"></script-->
     <script src="vendor/aframe-tooltip-component.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
@@ -27,32 +27,32 @@
       <a-assets>
         <img id="skymap" src="assets/images/sky.jpg" crossorigin="anonymous">
         <img id="uinormal" src="assets/images/ui-normal.png" crossorigin="anonymous">
-        <img id="floor" src="assets/images/floor.jpg" crossorigin="anonymous">
-        <a-asset-item id="logoobj" src="assets/models/logo.obj"></a-asset-item>
-        <a-asset-item id="logomtl" src="assets/models/logo.mtl"></a-asset-item>
+        <!--img id="floor" src="assets/images/floor.jpg" crossorigin="anonymous"-->
+        <!--a-asset-item id="logoobj" src="assets/models/logo.obj"></a-asset-item>
+        <a-asset-item id="logomtl" src="assets/models/logo.mtl"></a-asset-item-->
         <a-asset-item id="uiobj" src="assets/models/ui.obj"></a-asset-item>
-        <a-asset-item id="hitEntityObj" src="assets/models/teleportHitEntity.obj"></a-asset-item>
+        <!--a-asset-item id="hitEntityObj" src="assets/models/teleportHitEntity.obj"></a-asset-item-->
       </a-assets>
       <a-light type="point" light="color: #fff; intensity:0.6" position="3 10 1"></a-light>
-      <a-light type="point" light="color: #fff; intensity:0.2" position="-3 -10 0"></a-light>
-      <a-light type="hemisphere" groundColor="#888" intensity="0.8"></a-light>
-      <a-entity id="logo" obj-model="obj: #logoobj; mtl: #logomtl"></a-entity>
+      <!--a-light type="point" light="color: #fff; intensity:0.2" position="-3 -10 0"></a-light-->
+      <!--a-light type="hemisphere" groundColor="#888" intensity="0.8"></a-light-->
+      <!--a-entity id="logo" obj-model="obj: #logoobj; mtl: #logomtl"></a-entity-->
       <!--geometry="primitive: circle; radius: 12;"
       rotation="-90 0 0"-->
-      <a-entity id="hitEntityLeft" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
-      <a-entity id="hitEntityRight" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
+      <!--a-entity id="hitEntityLeft" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
+      <a-entity id="hitEntityRight" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity-->
 
-      <a-entity id="ground"
+      <!--a-entity id="ground"
                 geometry="primitive: box; width: 12; height: 0.01; depth: 12"
                 material="shader: flat; src: #floor">
-              </a-entity>
+              </a-entity-->
       <a-entity id="left-hand"
                 brush
                 if-no-vr-headset="visible: false"
                 paint-controls="hand: left"
                 teleport-controls="button: trackpad; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityLeft"
                 ui>
-                  <a-entity class="vive-tooltips" visible="false">
+                  <!--a-entity class="vive-tooltips" visible="false">
                     <a-entity tooltip="text: Brush size\n(slide up/down); width: 0.1; height: 0.04; targetPosition: 0 0.016 0.0073; src: assets/images/tooltip.png"
                               position="0.1 0.025 0.048"
                               rotation="-90 0 0">
@@ -104,7 +104,7 @@
                               position="0.11 0 0"
                               rotation="-90 0 0">
                     </a-entity>
-                </a-entity>
+                </a-entity-->
                 </a-entity>
       <a-entity id="right-hand"
                 brush
@@ -112,7 +112,7 @@
                 paint-controls="hand: right"
                 teleport-controls="button: trackpad; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityRight"
                 ui>
-                  <a-entity class="vive-tooltips" visible="false">
+                  <!--a-entity class="vive-tooltips" visible="false">
                     <a-entity tooltip="text: Brush size\n(slide up/down); width: 0.1; height: 0.04; targetPosition: 0 0.016 0.0073; src: assets/images/tooltip.png"
                               position="0.1 0.025 0.048"
                               rotation="-90 0 0">
@@ -163,7 +163,7 @@
                     <a-entity tooltip="text: Press to undo; width: 0.11; height: 0.03; targetPosition: 0 0 0; lineHorizontalAlign: right; src: assets/images/tooltip.png"
                               position="-0.11 0 0"
                               rotation="-90 0 0">
-                    </a-entity>
+                    </a-entity-->
                   </a-entity>
       </a-entity>
       <a-entity id="sky" geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90" material="shader:flat; side:back; height:2048; src:#skymap; width:2048"></a-entity>
