--- a/index.html
+++ b/index.html
@@ -28,35 +28,60 @@
       <a-assets>
         <img id="skymap" src="assets/images/sky.jpg" crossorigin="anonymous">
         <img id="uinormal" src="assets/images/ui-normal.png" crossorigin="anonymous">
-        <!--img id="floor" src="assets/images/floor.jpg" crossorigin="anonymous"-->
-        <!--a-asset-item id="logoobj" src="assets/models/logo.obj"></a-asset-item>
-        <a-asset-item id="logomtl" src="assets/models/logo.mtl"></a-asset-item-->
+        <img id="floor" src="assets/images/floor.jpg" crossorigin="anonymous">
+        <a-asset-item id="logoobj" src="assets/models/logo.obj"></a-asset-item>
+        <a-asset-item id="logomtl" src="assets/models/logo.mtl"></a-asset-item>
         <a-asset-item id="uiobj" src="assets/models/ui.obj"></a-asset-item>
-        <!--a-asset-item id="hitEntityObj" src="assets/models/teleportHitEntity.obj"></a-asset-item-->
+        <!-- <a-asset-item id="hitEntityObj" src="assets/models/teleportHitEntity.obj"></a-asset-item> -->
+        <canvas id="drawcam"></canvas>
       </a-assets>
       <a-light type="point" light="color: #fff; intensity:0.6" position="3 10 1"></a-light>
-      <!--a-light type="point" light="color: #fff; intensity:0.2" position="-3 -10 0"></a-light-->
-      <!--a-light type="hemisphere" groundColor="#888" intensity="0.8"></a-light-->
-      <!--a-entity id="logo" obj-model="obj: #logoobj; mtl: #logomtl"></a-entity-->
-      <!--geometry="primitive: circle; radius: 12;"
-      rotation="-90 0 0"-->
-            <!--a-entity id="ground"
+      <a-light type="point" light="color: #fff; intensity:0.2" position="-3 -10 0"></a-light>
+      <a-light type="hemisphere" groundColor="#888" intensity="0.8"></a-light>
+      <!-- <a-entity id="logo" obj-model="obj: #logoobj; mtl: #logomtl"></a-entity> -->
+      <!-- <geometry="primitive: circle; radius:      12;"
+      rotation="-90 0 0"> -->
+            <!-- <a-entity id="ground"
                       geometry="primitive: box; width: 12; height: 0.01; depth: 12"
                       material="shader: flat; src: #floor">
-                    </a-entity-->
+                    </a-entity> -->
 
       <a-entity id="sky" geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90" material="shader:flat; side:back; height:2048; src:#skymap; width:2048"></a-entity>
+      <a-entity id="drawcamera" position="0 0 0" rotation="-90 90 0"
+              grabbable="startButtons: gripdown; endButtons: gripup">
+        <a-cone color="brown" radius-bottom=".2" radius-top=".05" height=".5"
+           rotation="90 0 0">
+        </a-cone>
+        <a-entity camera="active: false" camrender="cid: drawcam"></a-entity>
+      </a-entity>
 
-      <a-entity id="hitEntityLeft" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
-      <a-entity id="hitEntityRight" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
+      <!-- <a-box position='0 0.5 0' material='color: red;'></a-box>
+       <a-box position="-1 0.5 -1" rotation="0 45 0" color="#4CC3D9" shadow></a-box> -->
+       <!-- <a-sphere position="-1 1 -3" radius=".05" color="#EF2D5E" shadow>
+         <a-animation attribute="radius" to=".1" direction="alternate" repeat="indefinite"></a-animation>
+       </a-sphere> -->
+       <!-- <a-cylinder position="1 0.75 -1" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
+       <a-plane position="0 0 -2" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane> -->
+
+
+
+      <!-- <a-entity id="hitEntityLeft" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity> -->
+      <!-- <a-entity id="hitEntityRight" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity> -->
       <a-entity id="cameraRig">
         <!-- camera -->
-        <a-entity id="acamera" camera wasd-controls look-controls orbit-controls></a-entity>
+        <a-entity id="acamera" camera wasd-controls look-controls>
+          <a-entity geometry="primitive:plane; width:.2; height:.15"
+                              material="src:#drawcam; opacity: .8" canvas-updater
+                              position="-.2 -.15 -.3" rotation="0 0 0"></a-entity>
+        </a-entity>
+
         <!-- hand controls -->
         <a-entity id="left-hand"
                   brush
                   if-no-vr-headset="visible: false"
                   paint-controls="hand: left"
+                  super-hands
+                  hand-controls="left"
                   teleport-controls="cameraRig: #cameraRig; button: trackpad; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityLeft"
                   ui>
                     <!--aentity class="vive-tooltips" visible="false">
@@ -135,6 +160,8 @@
                   brush
                   if-no-vr-headset="visible: false"
                   paint-controls="hand: right"
+                  super-hands
+                  hand-controls="right"
                   teleport-controls="cameraRig: #cameraRig; button: trackpad; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityRight"
                   ui>
                     <!--a-entity class="vive-tooltips" visible="false">
@@ -210,6 +237,7 @@
                     </a-entity-->
         </a-entity>
       </a-entity>
+
     </a-scene>
     <a href="https://aframe.io/a-painter/"><div id="apainter-logo" class="hidden"></div><div id="apainter-author" style="display:none" class="hidden">authorname</div></a>
     <div id="apainter-ui">
