End stroke for random stroke

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </a-assets>
       <a-light type="point" light="color: #fff; intensity:0.6" position="3 10 1"></a-light>
       <!--a-light type="point" light="color: #fff; intensity:0.2" position="-3 -10 0"></a-light-->
-      <!--a-light type="hemisphere" groundColor="#888" intensity="0.8"></a-light-->
+      <a-light type="hemisphere" groundColor="#888" intensity="0.8"></a-light>
       <!--a-entity id="logo" obj-model="obj: #logoobj; mtl: #logomtl"></a-entity-->
       <!--geometry="primitive: circle; radius: 12;"
       rotation="-90 0 0"-->
