--- a/index.html
+++ b/index.html
@@ -47,17 +47,26 @@
                     </a-entity> -->
 
       <a-entity id="sky" geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90" material="shader:flat; side:back; height:2048; src:#skymap; width:2048"></a-entity>
-      <a-entity id="drawcamera" position="0 0 0" rotation="-90 90 0"
-              grabbable="startButtons: gripdown; endButtons: gripup">
+      <a-entity id="drawcamera" position=".5 1 0" rotation="-90 90 0"
+              >
         <a-cone color="brown" radius-bottom=".2" radius-top=".05" height=".5"
-           rotation="90 0 0">
+           rotation="90 0 0" grabbable="startButtons: gripdown; endButtons: gripup">
         </a-cone>
         <a-entity camera="active: false" camrender="cid: drawcam"></a-entity>
       </a-entity>
+	  
+	  <a-entity id="triggerhappy" position="0 1 0" rotation="-90 90 0"
+              grabbable="startButtons: triggerdown; endButtons: triggerup">
+        <a-cone color="blue" radius-bottom=".2" radius-top=".05" height=".5"
+           rotation="90 0 0">
+        </a-cone>
+      </a-entity>
+	  
+	  <a-box hoverable grabbable stretchable draggable dropppable color="blue" position="-.2 1 0"></a-box>
 
       <!-- <a-box position='0 0.5 0' material='color: red;'></a-box>
        <a-box position="-1 0.5 -1" rotation="0 45 0" color="#4CC3D9" shadow></a-box> -->
-       <!-- <a-sphere position="-1 1 -3" radius=".05" color="#EF2D5E" shadow>
+<!--        <a-sphere position="-1 1 -3" radius=".05" color="#EF2D5E" shadow>
          <a-animation attribute="radius" to=".1" direction="alternate" repeat="indefinite"></a-animation>
        </a-sphere> -->
        <!-- <a-cylinder position="1 0.75 -1" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
@@ -68,28 +77,28 @@
       <!-- <a-entity id="hitEntityLeft" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity> -->
       <!-- <a-entity id="hitEntityRight" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity> -->
       <a-entity id="cameraRig">
+	           <a-entity geometry="primitive:plane; width:.5; height:.4"
+                              material="src:#drawcam; opacity: .8" canvas-updater
+                              position="0 .5 -.3" rotation="0 0 0"></a-entity>
         <!-- camera -->
         <a-entity id="acamera" camera wasd-controls look-controls>
-          <a-entity geometry="primitive:plane; width:.2; height:.15"
-                              material="src:#drawcam; opacity: .8" canvas-updater
-                              position="-.2 -.15 -.3" rotation="0 0 0"></a-entity>
+ 
         </a-entity>
-
+      <a-entity sphere-collider="objects: a-box" super-hands laser-controls></a-entity>
+      <a-entity sphere-collider="objects: a-box" super-hands laser-controls></a-entity>
         <!-- hand controls -->
-        <a-entity id="left-hand"
+<!--         <a-entity id="left-hand"
                   brush
                   if-no-vr-headset="visible: false"
                   paint-controls="hand: left"
                   super-hands
-                  hand-controls="left"
-                  teleport-controls="cameraRig: #cameraRig; button: trackpad; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityLeft"
-                  ui>
+                  ui> -->
                     <!--aentity class="vive-tooltips" visible="false">
                       <a-entity tooltip="text: Brush size\n(slide up/down); width: 0.1; height: 0.04; targetPosition: 0 0.016 0.0073; src: assets/images/tooltip.png"
                                 position="0.1 0.025 0.048"
                                 rotation="-90 0 0">
                       </a-entity>
-                      <a-entity tooltip="text: Main menu; width: 0.07; height: 0.03; targetPosition: 0 -0.07 -0.062; lineHorizontalAlign: center; lineVerticalAlign: bottom; src: assets/images/tooltip.png"
+                      <a-entity tooltip="text: Main m	enu; width: 0.07; height: 0.03; targetPosition: 0 -0.07 -0.062; lineHorizontalAlign: center; lineVerticalAlign: bottom; src: assets/images/tooltip.png"
                                 position="0 0.015 -0.05"
                                 rotation="-90 0 0">
                       </a-entity>
@@ -155,15 +164,13 @@
                                 rotation="-90 0 0">
                       </a-entity>
                   </a-entity-->
-        </a-entity>
+<!--         </a-entity>
         <a-entity id="right-hand"
                   brush
                   if-no-vr-headset="visible: false"
                   paint-controls="hand: right"
                   super-hands
-                  hand-controls="right"
-                  teleport-controls="cameraRig: #cameraRig; button: trackpad; ground: #ground; hitCylinderColor: #ff3468; curveHitColor: #ff3468; curveMissColor: #333333; curveLineWidth: 0.01; hitEntity: #hitEntityRight"
-                  ui>
+                  ui> -->
                     <!--a-entity class="vive-tooltips" visible="false">
                       <a-entity tooltip="text: Brush size\n(slide up/down); width: 0.1; height: 0.04; targetPosition: 0 0.016 0.0073; src: assets/images/tooltip.png"
                                 position="0.1 0.025 0.048"
@@ -235,7 +242,7 @@
                                 rotation="-90 0 0">
                       </a-entity>
                     </a-entity-->
-        </a-entity>
+<!--         </a-entity> -->
       </a-entity>
 
     </a-scene>
