reenable paint controls

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a-asset-item id="logoobj" src="assets/models/logo.obj"></a-asset-item>
         <a-asset-item id="logomtl" src="assets/models/logo.mtl"></a-asset-item>
         <a-asset-item id="uiobj" src="assets/models/ui.obj"></a-asset-item>
-        <!-- <a-asset-item id="hitEntityObj" src="assets/models/teleportHitEntity.obj"></a-asset-item> -->
+        <a-asset-item id="hitEntityObj" src="assets/models/teleportHitEntity.obj"></a-asset-item>
         <canvas id="drawcam"></canvas>
       </a-assets>
       <a-light type="point" light="color: #fff; intensity:0.6" position="3 10 1"></a-light>
@@ -67,8 +67,8 @@
 
 
 
-      <!-- <a-entity id="hitEntityLeft" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity> -->
-      <!-- <a-entity id="hitEntityRight" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity> -->
+      <a-entity id="hitEntityLeft" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
+      <a-entity id="hitEntityRight" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
       <a-entity id="cameraRig">
         <!-- camera -->
         <a-entity id="acamera" camera wasd-controls look-controls>
